--- a/.github/workflows/push_event_workflow.yml
+++ b/.github/workflows/push_event_workflow.yml
@@ -10,9 +10,8 @@ jobs:
     - name : Checkout code
       uses : actions/checkout@v2
       
-    - name : Install Test Package 
-      run : pip install unittest
-            pip install openai
+    - name : Install Packages 
+      run : pip install openai
       
     - name : Run tests 
       run : python3 -m unittest simpleGPyT.Testing
