--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,10 @@
-name: Testing SimpleGPyT
+name: Windows
 
 on: push 
 
 jobs:
   unit-testing:
-    runs-on: ubuntu-latest 
+    runs-on: windows-latest
     
     steps:
     - name : Checkout code
